<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:gravity="center"
            android:id="@+id/ll">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:id="@+id/educational_center_click_event"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/educational_centers"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/educational_centers"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:id="@+id/health_center_event_click"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/health_centers"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/health_places"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:id="@+id/general_places_id"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/office"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="مکان های عمومی"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/enterprise"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/companies"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/office_workers"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/government_office"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/restaurants"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:gravity="center"
                            android:text="@string/restuarants_coffee"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/factory"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/factories"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/media"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/media"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/global"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:gravity="center"
                            android:text="@string/global_organizations"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/different_place"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/different_places"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/mosques"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/mosques"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/ancient_place"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:gravity="center"
                            android:text="باستانی"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</ScrollView>