<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/toy"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/kids_toys"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/cosmetics"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="آرایشی و بهداشتی"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/shirt_stores"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="مد و پوشاک"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/appliance"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/home_and_kitchen"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/soccer_ball"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/sports_and_travel"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/eat_and_drink"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/eat_and_drinks"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/machinery"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="ماشین آلات"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/house"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="مواد ساختمانی"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="0dp"
                                                android:layout_height="110dp"
                                                android:layout_weight="1"
                                                android:layout_margin="3dp"
                                                android:foreground="?android:attr/selectableItemBackground"
                                                android:clickable="true"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:src="@drawable/electrical"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryText"
                            android:layout_marginTop="4dp"
                            android:text="@string/electrical_tools"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>